--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,4 +34,12 @@ a {
   font-family: 'Montserrat-Regular';
   src: url('/fonts/Montserrat-Regular.ttf') format('truetype'),
 }
+@font-face {
+  font-family: 'Montserrat-SemiBold';
+  src: url('/fonts/Montserrat-SemiBold.ttf') format('truetype'),
+}
+@font-face {
+  font-family: 'Montserrat-Bold';
+  src: url('/fonts/Montserrat-Bold.ttf') format('truetype'),
+}
 
